# loclone

./: .gitignore  LICENCE  Makefile  Makefile.am  README.md  configure.ac  img.c  img.h  lo.c  lo.h  loclone.1  loclone.c  subvol.c  subvol.h  xfsub-snapshot.c
